2004-03-09 Bernhard Held <bernhard AT bernhardheld.de>

	* device/lib/time.c (mktime): fixed bug reported by Bert Thomas

2004-03-09 Hans Dorn <hjdorn AT users.sourceforge.net>

	* src/pic16/gen.c (genSkip),
	(genc16bit2lit), (gencjneshort): commented out
	(is_LitOp): new helper function, checks operand type
	(genCmpEq): rewritten

2004-03-08 Bernhard Held <bernhard AT bernhardheld.de>

	* support/regression/tests/bug-908454.c: added

2004-03-07 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (addCast): fixed bug #908454 by promoting bits to char
	* src/SDCCicode.c (usualBinaryConversions): op needs int type
	(geniCodeCast): cosmetic, don't preserve bit storage class
	(geniCodeLeftShift): added promotion
	(geniCodeLogic): fixed regression
	* src/SDCCsymt.c (computeTypeOr): accept bits too
	(compareType): 2nd part of fix for bug #908454, needed for bitfields

2004-03-07  Borut Razem <borut.razem AT siol.net>

	* support/Util/findme.c: alloca() replaced with malloc()/free() pair

2004-03-06 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/ralloc.c (pic16_genPackRegisters): reverted to old
	version of pic16_genPackRegisters which does not check if ic is a
	CAST operator,
	* src/pic16/gen.c (ifxForOp): disabled new and untested code in
	function cause string1.c regression test fails

2004-03-06 Bernhard Held <bernhard AT bernhardheld.de>

	* sim/ucsim/configure.in,
	* sim/ucsim/configure,
	* sim/ucsim/doc/Makefile.in: use docdir
	* src/SDCC.y: fixed sbit atrributes
	* src/SDCCast.c (getResultTypeFromType): added support for bitfields
	* src/SDCCast.c (decorateType): |^& need special promotion handling
	* src/SDCCast.h,
	* src/SDCCsymt.h: moved definition of RESULT_TYPE
	* src/SDCCsymt.h (computeType),
	* src/SDCCicode.c: computeType() needs op
	* src/SDCCsymt.c (checkTypeSanity),
	* doc/sddman.lyx: "plain" bitfields are unsigned
	* src/SDCCsymt.c (computeTypeOr): added
	* src/SDCCsymt.c (computeType): added support for bitfields, fixed
	|^& ops